<resources>
    <string name="app_name">Dosnumeros</string>

    <string name="numero1">Número 1:</string>
    <string name="numero2">Número 2:</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multi">Multiplicación</string>
    <string name="divis">División</string>
    <string name="calcular">Calcular</string>
    <string name="Total">El total es:</string>
    <string name="Ingrese">Ingrese #</string>
    <string name="comentario">Ingrese todos los campos</string>
    <string name="action_settings">Settings</string>
</resources>
