<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/material_blue_grey_800">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/enumero1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero2"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/background_material_light"
            android:hint="@string/Ingrese"
            android:inputType="numberDecimal"
            android:id="@+id/enumero2" />

    </LinearLayout>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/suma"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:id="@+id/rsuma"
            />
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resta"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:id="@+id/rresta"/>
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multi"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:id="@+id/rmul"/>
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divis"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:id="@+id/rdiv"/>

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calcular"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/bcalcular"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Total"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:layout_marginLeft="5dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/background_material_light"
            android:layout_marginTop="20dp"
            android:id="@+id/ttotal"/>

    </LinearLayout>
</LinearLayout>